--- a/src/NetPack.Web.Blazor/Pages/Index.razor
+++ b/src/NetPack.Web.Blazor/Pages/Index.razor
@@ -2,6 +2,6 @@
 
 <h1>Hello, world!</h1>
 
-    Welcome to your new app!
+    Welcome to your new app yeah boo hoo!
 
 <SurveyPrompt Title="How is Blazor working for you..?" />
