--- a/src/NetPack.Web.Blazor/Pages/Counter.razor
+++ b/src/NetPack.Web.Blazor/Pages/Counter.razor
@@ -4,7 +4,7 @@
 
 <p>Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="@IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     int currentCount = 0;
@@ -12,6 +12,6 @@
     void IncrementCount()
     {
         currentCount++;
-    currentCount = currentCount + 5;
+       currentCount = currentCount + 35;
     }
 }
