--- a/src/NetPack.Web.Blazor/_Imports.razor
+++ b/src/NetPack.Web.Blazor/_Imports.razor
@@ -5,3 +5,4 @@
 @using NetPack.Web.Blazor
 @using NetPack.Web.Blazor.Shared
 @using NetPack.BrowserReload.BlazorClient
+@using Microsoft.AspNetCore.Components.Web
