Upgrade blazor to 3-2-0-preview-1

--- a/src/NetPack.Web.Blazor/Pages/Index.razor
+++ b/src/NetPack.Web.Blazor/Pages/Index.razor
@@ -2,6 +2,6 @@
 
 <h1>Hello, world!</h1>
 
-    Welcome - change this text and save the file and watch it reload (takes upto 10 seconds for the dotnet build to complete!)
+    Welcome Daz - change this text and save the file and watch it reload (takes upto 10 seconds for the dotnet build to complete!)
 
 <SurveyPrompt Title="How is Blazor working for you..?" />
